Sec2_Chap6-Overview of Microservices: Pierrot Optimizations